updated to use new domain name

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -101,10 +101,10 @@
     <p>
       <strong>Website</strong> refers to AI Game Collection, accessible from
       <a
-        href="https://jereme.dev/games"
+        href="https://aigamecollection.com/"
         rel="external nofollow noopener"
         target="_blank"
-        >https://jereme.dev/games</a>
+        >AI Game Collection</a>
     </p>
   </li>
   <li>
