updated domain name

--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://aigamecollection.com/">
-	<meta property="og:title" content="AI Game Collection - aigamecollection.com">
+	<meta property="og:url" content="https://jereme.dev/games/">
+	<meta property="og:title" content="AI Game Collection - jereme.dev/games">
 	<meta property="og:description" content="This site and all games were built using AI with minimal code changes.">
-	<meta property="og:image" content="https://aigamecollection.com/images/icons/web-app-manifest-512x512.png">
+	<meta property="og:image" content="https://jereme.dev/games/images/icons/web-app-manifest-512x512.png">
 
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:url" content="https://aigamecollection.com/">
-	<meta name="twitter:title" content="AI Game Collection - aigamecollection.com">
+	<meta name="twitter:url" content="https://jereme.dev/games/">
+	<meta name="twitter:title" content="AI Game Collection - jereme.dev/games">
 	<meta name="twitter:description" content="This site and all games were built using AI with minimal code changes.">
-	<meta name="twitter:image" content="https://aigamecollection.com/images/icons/web-app-manifest-512x512.png">
+	<meta name="twitter:image" content="https://jereme.dev/games/images/icons/web-app-manifest-512x512.png">
 
 	<!-- Additional Tags -->
-	<link rel="canonical" href="https://aigamecollection.com/">
-	<meta property="og:site_name" content="aigamecollection.com">
+	<link rel="canonical" href="https://jereme.dev/games/">
+	<meta property="og:site_name" content="jereme.dev">
 	<meta property="og:locale" content="en_US">
 
     <style>
