--- a/games/minesweeper/index.html
+++ b/games/minesweeper/index.html
@@ -225,7 +225,7 @@
             }
             .game-over {
                 margin: 0 8px;
-                padding: 12px 16px;
+                padding: 10px 16px;
                 flex: 1;
                 background-color: var(--container-bg);
                 color: var(--text-color);
@@ -237,6 +237,8 @@
                 gap: 16px;
                 justify-content: space-between;
                 min-width: 0;
+                color: red;
+                animation: pulse 2s infinite;
             }
             .game-over h2 {
                 margin: 0;
@@ -248,6 +250,20 @@
                 font-size: 1rem;
                 white-space: nowrap;
             }
+			@keyframes pulse {
+			  0% {
+				transform: scale(1);
+				opacity: 1;
+			  }
+			  50% {
+				transform: scale(1.1);
+				opacity: 0.7;
+			  }
+			  100% {
+				transform: scale(1);
+				opacity: 1;
+			  }
+			}
             .play-again-btn {
                 padding: 8px 16px;
                 font-size: 1rem;
