--- a/games/breakout/index.html
+++ b/games/breakout/index.html
@@ -4,119 +4,152 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakout</title>
-    <style>
-        /* ... keeping all the same styles ... */
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: #1a1a1a;
-            font-family: Arial, sans-serif;
-            touch-action: none;
-        }
-        #gameCanvas {
-            border: 2px solid #333;
-            background: #000;
-            max-width: 100%;
-            max-height: 70vh;
-        }
-        #controlArea {
-            width: 100%;
-            height: 80px;
-            background: #333;
-            margin-top: 20px;
-            touch-action: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-size: 14px;
-        }
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            z-index: 100;
-        }
-        .button {
-            padding: 15px 30px;
-            font-size: 20px;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-        .button:hover {
-            background: #45a049;
-        }
-        .score {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-        #container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            max-width: 800px;
-            position: relative;
-        }
-        #statusBar {
-            width: 100%;
-            padding: 10px;
-            background: #333;
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-        .statItem {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            font-size: 18px;
-        }
-        .label {
-            color: #888;
-            margin-right: 5px;
-            font-size: 14px;
-        }
-        #livesDisplay {
-            display: flex;
-            gap: 8px;
-            align-items: center;
-        }
-        .life-ball {
-            width: 16px;
-            height: 16px;
-            background: transparent;
-        }
-        
-        @media (hover: hover) and (pointer: fine) {
-            .controlAreaText {
-                display: none !important;
-            }
-        }
+	<style>
+		/* Global copy prevention */
+		* {
+		    -webkit-user-select: none;
+		    -moz-user-select: none;
+		    -ms-user-select: none;
+		    user-select: none;
+		    -webkit-touch-callout: none;
+		}
+
+		/* Base styles */
+		body {
+		    margin: 0;
+		    padding: 0;
+		    display: flex;
+		    flex-direction: column;
+		    justify-content: center;
+		    align-items: center;
+		    min-height: 100vh;
+		    background: #1a1a1a;
+		    font-family: Arial, sans-serif;
+		    touch-action: none;
+		    -webkit-touch-callout: none;
+		    overscroll-behavior: none;
+		}
+
+		#gameCanvas {
+		    border: 2px solid #333;
+		    background: #000;
+		    max-width: 100%;
+		    max-height: 70vh;
+		}
+
+		#controlArea {
+		    width: 100%;
+		    height: 80px;
+		    background: #333;
+		    margin-top: 20px;
+		    touch-action: pan-x;
+		    display: flex;
+		    justify-content: center;
+		    align-items: center;
+		    color: #fff;
+		    font-size: 14px;
+		    -webkit-touch-callout: none;
+		    -webkit-user-select: none;
+		    -moz-user-select: none;
+		    -ms-user-select: none;
+		    user-select: none;
+		}
+
+		.overlay {
+		    position: fixed;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    background: rgba(0, 0, 0, 0.8);
+		    display: flex;
+		    flex-direction: column;
+		    justify-content: center;
+		    align-items: center;
+		    color: white;
+		    z-index: 100;
+		}
+
+		.button {
+		    padding: 15px 30px;
+		    font-size: 20px;
+		    background: #4CAF50;
+		    color: white;
+		    border: none;
+		    border-radius: 5px;
+		    cursor: pointer;
+		    margin-top: 20px;
+		    -webkit-user-select: none;
+		    user-select: none;
+		    -webkit-touch-callout: none;
+		}
+
+		.button:hover {
+		    background: #45a049;
+		}
+
+		.score {
+		    font-size: 24px;
+		    margin-bottom: 20px;
+		}
+
+		#container {
+		    display: flex;
+		    flex-direction: column;
+		    align-items: center;
+		    width: 100%;
+		    max-width: 800px;
+		    position: relative;
+		}
+
+		#statusBar {
+		    width: 100%;
+		    padding: 10px;
+		    background: #333;
+		    color: white;
+		    display: flex;
+		    justify-content: space-between;
+		    align-items: center;
+		    border-radius: 5px;
+		    margin-bottom: 10px;
+		    box-sizing: border-box;
+		}
+
+		.statItem {
+		    display: flex;
+		    align-items: center;
+		    gap: 5px;
+		    font-size: 18px;
+		}
+
+		.label {
+		    color: #888;
+		    margin-right: 5px;
+		    font-size: 14px;
+		}
+
+		#livesDisplay {
+		    display: flex;
+		    gap: 8px;
+		    align-items: center;
+		}
+
+		.life-ball {
+		    width: 16px;
+		    height: 16px;
+		    background: transparent;
+		}
+
+		/* Optional: Keep score and level selectable */
+		#scoreDisplay, #levelDisplay {
+		    -webkit-user-select: text;
+		    user-select: text;
+		}
+
+		/* Mobile gesture hint styles */
 		.gesture-hint {
 		    position: absolute;
-		    bottom: 16px;
+		    bottom: 21px;
 		    left: 50%;
 		    transform: translateX(-50%);
 		    background: rgba(255, 255, 255, 0.2);
@@ -157,13 +190,16 @@
 		    display: none;
 		}
 
-		/* Hide gesture hint on desktop */
+		/* Desktop-specific styles */
 		@media (hover: hover) and (pointer: fine) {
+		    .controlAreaText {
+		        display: none !important;
+		    }
 		    .gesture-hint {
 		        display: none;
 		    }
 		}
-    </style>
+	</style>
 </head>
 <body>
     <div id="container">
