updated game names

--- a/games/snake/index.html
+++ b/games/snake/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Snake Game</title>
+    <title>Snake</title>
     <style>
         * {
             margin: 0;
@@ -143,7 +143,7 @@
     <div id="game-container">
         <canvas id="gameCanvas"></canvas>
         <div class="start-screen" id="startScreen">
-            <h1>Snake Game</h1>
+            <h1>Snake</h1>
             <button onclick="startGame()">Play Now</button>
         </div>
         <div class="game-over" id="gameOver">
