--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@
 			</svg>`,
 				mobileOnly: false
 	},
-            pipesPuzzle: {
-                title: 'Pipes Puzzle',
-                path: '/games/pipes-puzzle/',
+            pipes: {
+                title: 'Pipes',
+                path: '/games/pipes/',
                 description: 'Connect the pipes to create a continuous flow. A challenging puzzle game that will test your logical thinking.',
                 icon: `<svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="white">
                     <g>
@@ -588,9 +588,9 @@ mobileOnly: false
 </svg>`,
 mobileOnly: false
 			},
-			snakeGame: {
-				title: 'Snake Game',
-				path: '/games/snake-game/',
+			snake: {
+				title: 'Snake',
+				path: '/games/snake/',
 				description: 'Classic snake game with a modern twist. Eat the food, grow longer, and try not to hit the walls or yourself!',
 				icon: `
 <svg height="800px" width="800px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
