--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                         <path fill="#ffffff" d="m472 228s-18-17-55-11c-4-29-35-46-35-46s-29 35-8 74c-6 3-16 7-31 7H68c-5 19-5 145 133 145 99 0 173-46 208-130 52 4 63-39 63-39"/>
                     </svg>
                 </a>
-                <a href="https://github.com/jeremehancock/AI-Game-Collection" target="_blank" class="github-link" title="Check it out on GitHub">
+                <a href="https://github.com/jeremehancock/AI-Game-Collection?tab=readme-ov-file#ai-game-collection" target="_blank" class="github-link" title="Check it out on GitHub">
                     <svg height="24" width="24" viewBox="0 0 24 24" style="margin: 4px" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                     </svg>
