--- a/index.html
+++ b/index.html
@@ -158,21 +158,23 @@
 		}
 
 		.play-button {
-		    display: inline-block;
-		    width: auto;
-		    max-width: fit-content;
-		    padding: 0.5rem 1rem;
-		    background: rgba(255, 255, 255, 0.1);
-		    border: 1px solid rgba(255, 255, 255, 0.2);
-		    border-radius: 5px;
-		    color: #fff;
-		    text-decoration: none;
-		    transition: all 0.3s ease;
-		    margin-top: auto;
-		    text-align: left;
-		    cursor: pointer;
-		    font-weight: 500;
-		    letter-spacing: 0.01em;
+					display: inline-block;
+					width: auto;
+					max-width: fit-content;
+					padding: 0.5rem 1rem;
+					background: rgba(255, 255, 255, 0.1);
+					border: 1px solid rgba(255, 255, 255, 0.2);
+					border-radius: 5px;
+					color: #fff;
+					text-decoration: none;
+					transition: all 0.3s ease;
+					margin-top: auto;
+					margin-left: auto;
+					text-align: left;
+					cursor: pointer;
+					font-weight: 500;
+					letter-spacing: 0.01em;
+					align-self: flex-end;
 		}
 
 		.play-button:hover {
