--- a/games/space-shooter/index.html
+++ b/games/space-shooter/index.html
@@ -57,7 +57,7 @@
 
         #controlArea {
             position: fixed;
-            bottom: 0;
+            bottom: 90px;
             left: 0;
             width: 100%;
             height: 80px;
