added explosion sound when asteroid hits spaceship

--- a/games/space-shooter/index.html
+++ b/games/space-shooter/index.html
@@ -835,7 +835,7 @@
             if (isMobile) {
                 controlArea.style.display = 'none';
             }
-            
+            playExplosionSound();
             const overlay = document.createElement('div');
             overlay.className = 'game-overlay game-over';
             
